Table Spacing Fix

--- a/Examples/Tabulator/src/visualization/style.css
+++ b/Examples/Tabulator/src/visualization/style.css
@@ -18,7 +18,7 @@
   --header-sort-icon-inactive: rgb(180, 180, 180);
   --header-filter-bg: rgb(44, 53, 73);
   --header-filter-icon: rgb(240, 240, 240);
-  --header-padding: 4px;
+  --table-spacing: "6px 4px";
 
   /* Row Styling */
   --row-bg-even: rgb(255, 255, 255);
@@ -714,7 +714,7 @@
   background-color: var(--row-bg-odd);
   color: var(--row-text-odd);
   box-sizing: border-box;
-  min-height: var(--font-size, 15px) + (var(--header-padding) * 2);
+  min-height: var(--font-size, 15px);
   position: relative;
 }
 
@@ -802,7 +802,7 @@
   display: inline-block;
   outline: none;
   overflow: hidden;
-  padding: 4px;
+  padding: var(--table-spacing) !important;
   position: relative;
   text-overflow: ellipsis;
   vertical-align: middle;
